syntax = "proto3";
package packets;

option go_package = "./dist;packets";

message Join{
  int32 ptype = 1;
}

message PlayerJoined{
  int32 type = 1;
  int64 id = 2;
  int64 x = 3;
  int64 y = 4;
}

message PlayerDisconnected{
  int32 type = 1;
  int64 id = 2;
}